//! Functions for converting between Casper types and their Protobuf equivalents which are
//! defined in protobuf/io/casperlabs/ipc/ipc.proto

mod deploy_item;
mod deploy_result;
mod exec_config;
mod executable_deploy_item;
mod execute_request;
mod execution_effect;
mod genesis_account;
mod genesis_config;
mod get_era_validators_request;
mod query_request;
mod run_genesis_request;
mod step;
mod upgrade_request;
mod wasm_costs;
